k8s/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: fullstack.singularis.work		
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: nginx-basic
            port:
              number: 80
